ver detalles profesor

--- a/notas-profesores.html
+++ b/notas-profesores.html
@@ -161,16 +161,20 @@
             color: #dc3545; /* Rojo */
         }
 
-        /* Estilos del footer - Copiado de profesores.html */
+        /* Estilos del footer*/
         footer {
             text-align: center;
             padding: 20px;
-            margin-top: 40px;
             color: #777;
             font-size: 14px;
             border-top: 1px solid #eee;
             background-color: #fff;
-        }
+            position: fixed; 
+            bottom: 0;       
+            left: 0;         
+            width: 100%;     
+            z-index: 1000;   
+}
     </style>
 </head>
 <body>
